# ml-inference-benchmark

./: README.md
python/: .gitignore
python/object-detection-benchmark/: dataset.py  main.py
rust/: Cargo.toml
rust/src/: dataset.rs  main.rs
