[package]
name = "object-detection-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
#blas-src = { version = "0.8.0", features = ["openblas"] }
byteorder = "1.4.3"
#flate2 = "1.0.24"
image = "0.24.3"
structopt = "0.3.26"
#ndarray = { version = "0.15.6", features = ["blas"] }
#openblas-src = { version = "0.10.5", features = ["cblas", "system"] }
tract-onnx = "0.18.3"

